hphp/test/zend/good/ext/ldap/tests/ldap_bind_variation.php.skipif
<?hh
// Note that this directory also has a config.runif file that gates this test
<<__EntryPoint>> function skipif(): void {
  require_once('connect.inc');
  require_once('skipifbindfailure.inc');
  skip_if_bind_failure();
}
