hphp/test/zend/bad/ext/mysqli/tests/bug66124.php.skipif
<?php
require_once('skipif.inc');
require_once('connect.inc');
require_once('skipifconnectfailure.inc');
?>